@@ -293,11 +293,13 @@ Class methods:
     record. Or for a :class:`fields.Dict` field, the dotted notation is used to
     sort on the key's value.
 
-    If `count` is set to `True`, then the result is the number of records.
+    If ``count`` is set to ``True``, then the result is the number of records.
+    The count result is limited upto the value of ``limit`` if set.
 
-.. classmethod:: ModelStorage.search_count(domain)
+.. classmethod:: ModelStorage.search_count(domain[, offset[, limit]])
 
     Return the number of records that match the :ref:`domain <topics-domain>`.
+    The result is limited upto the value of ``limit`` if set and reduced by offset.
 
 .. classmethod:: ModelStorage.search_read(domain[, offset[, limit[, order[, fields_names]]]])
 
@@ -313,6 +315,10 @@ Class methods:
 
     Yield tuples (record, name, icon) for records matching text.
     It is used for the global search.
+
+.. classmethod:: ModelStorage.count()
+
+    Return an estimation of the number of records stored.
 
 .. classmethod:: ModelStorage.browse(ids)
 
